--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
               </div>
     <div style="height: 200px; padding: 1px 0 0 0;">
         <div class="card card--material">
-          <div class="card__title card--material__title">Card Title</div>
+          <div class="card__title card--material__title">Add Customer Name</div>
           <span>
                 <div class="input"><input class="text-input--material" placeholder="Username" type="text" required></div>
                 <br />
-          <button class="button--large--cta" style="width: 95%; margin: 0 auto;">Button</button>
+          <button class="button--large--cta" style="width: 95%; margin: 0 auto;">Submit</button>
         </div>
       </div>
 </body>
