--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="card card--material">
           <div class="card__title card--material__title">Add Customer Name</div>
           <span>
-                <div class="input"><input class="text-input--material" placeholder="Username" type="text" required></div>
+                <div class="input"><input class="text-input--material" placeholder="customer name" type="text" required></div>
                 <br />
           <button class="button--large--cta" style="width: 95%; margin: 0 auto;">Submit</button>
         </div>
