--- a/insert.html
+++ b/insert.html
@@ -10,50 +10,34 @@
 </head>
 
 <body>
-    <div class="container">
-        <button class="btn">Insert Data</button>
-    </div>
-    <div class="form-group">
+    <form action="">
         <label for="id">Name ID</label>
         <input type="text" id="name_id" placeholder="name ID">
-    </div>
-    <div class="form-group">
         <label for="id">Name</label>
         <input type="text" id="name" placeholder="name">
-    </div>
-    <div class="form-group">
         <label for="id">Username</label>
         <input type="text" id="username" placeholder="username">
-    </div>
-    <div class="form-group">
         <label for="id">Password</label>
         <input type="text" id="password" placeholder="password">
-    </div>
-    <button type="submit" onclick="saveData()">Save</button>
+        <button type="button" id="submit">Save</button>
+    </form>
+    <p id="out">----</p>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
-        $.ajaxSetup({
-            headers: {
-                'X-CSRF-TOKEN': $('meta[name="csrf-token"]').attr('content')
-            }
-        });
-
-        function saveData() {
-            console.log('Hello');
-
-            var id = $('#name_id').val();
-            var name = $('#name').val();
-            var username = $('#username').val();
-            var password = $('#password').val();
-            $.ajax({
-                type: 'POST',
-                url: "connect.php?p=add",
-                data: "name_id=" + id + "&name" + name + "&username" + username + "&password" + password,
-                success: function (msg) {
-                    alert('success insert data');
-                }
+        $(document).ready(function () {
+            $("#submit").on('click', function () {
+                var na = $("#name").val();
+                var user = $("#username").val();
+                var pass = $("#password").val();
+                $.post("save.php", {
+                    name:na,
+                    username:user,
+                    password:pass
+                }, function (data) {
+                    $("#out").html(data);
+                });
             });
-        }
+        });
     </script>
 </body>
 
